--- a/rottenpotatoes/app/views/movies/edit.html.haml
+++ b/rottenpotatoes/app/views/movies/edit.html.haml
@@ -1,3 +1,7 @@
+//Thotsawat Fukiatisut  5410611957
+//Supanut Supamitgijja  5410610728
+
+
 -# edit.html.haml using partial
 
 %h1 Edit Existing Movie
@@ -12,5 +16,8 @@
 
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date
+  
+  = label :movie, :director, 'Director'
+  = text_field :movie, 'director'
 
   = submit_tag 'Update Movie Info'
