--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -1,3 +1,6 @@
+//Thotsawat Fukiatisut  5410611957
+//Supanut Supamitgijja  5410610728
+
 -# in app/views/movies/show.html.haml
 
 %h2 Details about #{@movie.title}
@@ -9,6 +12,9 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
+  %li
+    Director:
+    = @movie.director
 
 %h3 Description:
 
@@ -17,3 +23,4 @@
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
+= link_to 'Find Movies With Same Director', same_director_path(@movie)
